ingress-traefik.yaml
# ingress for traefix
#  curl -H'Host: hello-app.clh.org' http://<externalip of traefik service>
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: hello-app
spec:
  rules:
  - host: hello-app.clh.org
    http:
      paths:
      - backend:
          serviceName: hello-app
          servicePort: 8080
        path: /
        pathType: ImplementationSpecific
