v3.yaml
#
# curl -H'host: hello-app.clh.org' http://<IstioGwyControolerIP>:80
#   expected result: round robin hello-app version 2 and 3
# curl -H'host: hello-app-v1.clh.org' http://<IstioGwyControolerIP>:80
#   expected result: specifically targets version 1 
#
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    field.cattle.io/projectId: p-q8w8l
    istio-injection: enabled
  name: hello-app
spec: {}

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
  name: hello-app
  namespace: hello-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*/*.clh.org'
    port:
      name: http
      number: 80
      protocol: HTTP

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-app
  namespace: hello-app
spec:
  host: hello-app.hello-app.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
  - labels:
      version: v3
    name: v3

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-app
  namespace: hello-app
spec:
  gateways:
  - hello-app
  hosts:
  - hello-app.clh.org
  http:
  - route:
    - destination:
        host: hello-app.hello-app.svc.cluster.local
        port:
          number: 8080
        subset: v2
      weight: 50
    - destination:
        host: hello-app.hello-app.svc.cluster.local
        port:
          number: 8080
        subset: v3
      weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-app-v1
  namespace: hello-app
spec:
  gateways:
  - hello-app
  hosts:
  - hello-app-v1.clh.org
  http:
  - route:
    - destination:
        host: hello-app.hello-app.svc.cluster.local
        port:
          number: 8080
        subset: v1
