v4.yaml
#
# PREREQ: You have defined a wildcard DNS (*) in apps.hpe.org (or your own subdomain)
#   This wildcard resolves to the external IP address assigned to the istio-gateway service. In the example below, this
#   IP address would be 10.15.160.241
#       $ kubectl get svc  -n istio-system istio-ingressgateway
#       NAME                   TYPE           CLUSTER-IP     EXTERNAL-IP     PORT(S)                      AGE
#       istio-ingressgateway   LoadBalancer   10.43.77.248   10.15.160.241   80:31380/TCP,443:31390/TCP   6d1h
#
# curl http://hello-app.apps.hpe.org
#   expected result: round robin hello-app version 2 and 3
# curl http://hello-app-v1.apps.hpe.org
#   expected result: specifically targets version 1 
#

---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    field.cattle.io/projectId: p-q8w8l
    istio-injection: enabled
  name: hello-app
spec: {}

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
  name: hello-app
  namespace: hello-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*/*.apps.hpe.org'
    port:
      name: http
      number: 80
      protocol: HTTP

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-app
  namespace: hello-app
spec:
  host: hello-app.hello-app.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
  - labels:
      version: v3
    name: v3

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-app
  namespace: hello-app
spec:
  gateways:
  - hello-app
  hosts:
  - hello-app.apps.hpe.org
  http:
  - route:
    - destination:
        host: hello-app.hello-app.svc.cluster.local
        port:
          number: 8080
        subset: v2
      weight: 50
    - destination:
        host: hello-app.hello-app.svc.cluster.local
        port:
          number: 8080
        subset: v3
      weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-app-v1
  namespace: hello-app
spec:
  gateways:
  - hello-app
  hosts:
  - hello-app-v1.apps.hpe.org
  http:
  - route:
    - destination:
        host: hello-app.hello-app.svc.cluster.local
        port:
          number: 8080
        subset: v1
