vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
  name: hello-app
  namespace: default
spec:
  gateways:
  - hello-app
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: hello-app
        subset: v1
      weight: 0
    - destination:
        host: hello-app
        subset: v2
      weight: 50
    - destination:
        host: hello-app
        subset: v3
      weight: 50
